--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,7 +10,7 @@
 @import '../../node_modules/@syncfusion/ej2-icons/styles/material.css';
 @import '../../node_modules/@syncfusion/ej2-lists/styles/material.css';
 @import '../../node_modules/@syncfusion/ej2-richtexteditor/styles/material.css';
-
+@import "../../node_modules/@syncfusion/ej2-react-inputs/styles/material.css";
 html,
 body {
   padding: 0;
