--- a/src/styles/helper.scss
+++ b/src/styles/helper.scss
@@ -10,3 +10,13 @@ $pink: rgba(169, 81, 139, 1);
   opacity: 0.70;
   transition: .5s ease;
 }
+
+
+.hoverClassForButtons {
+  background: inherit;
+}
+
+.hoverClassForButtons:hover {
+  cursor: pointer;
+  opacity: 0.50;
+}
