Adicionando anchors aos cards

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -24,6 +24,18 @@ a {
   text-decoration: none;
 }
 
+a.nostyle:link {
+  text-decoration: inherit;
+  color: inherit;
+  cursor: auto;
+}
+
+a.nostyle:visited {
+  text-decoration: inherit;
+  color: inherit;
+  cursor: auto;
+}
+
 * {
   box-sizing: border-box;
 }
